<resources>
    <string name="app_name">Lernen</string>
    <string name="logo_tv">Lernen Sie Deutsch</string>
    <string name="add_new_word_button_string">Додати</string>
    <string name="all_words_list_button_string">Всі слова</string>
    <string name="learn_button_string">Вчити</string>
    <string name="lesson_TIL_hint_string">Урок</string>
    <string name="word_TIL_hint_string">Слово</string>
    <string name="translation_TIL_hint_string">Переклад</string>
    <string name="learnAllWordsButton">Всі</string>
    <string name="ok_button_string">ОК</string>
    <string name="learn_score_string">0</string>
    <string name="congrats_string">Вітання!!!</string>
    <string name="newly_string">Знову</string>
    <string name="another_lesson_string">Інший урок</string>
    <string name="no_words_string">Слова відсутні</string>
    <string name="sound_button">sound button</string>
</resources>