<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startGL"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endGL"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/topGL"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottomGL"
        app:layout_constraintGuide_end="6dp"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/logo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/logo_tv"
        app:layout_constraintEnd_toStartOf="@id/endGL"
        app:layout_constraintStart_toEndOf="@id/startGL"
        app:layout_constraintTop_toBottomOf="@id/topGL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/add_new_word_button_string"
        app:layout_constraintBottom_toTopOf="@+id/all_words_list_button"
        app:layout_constraintEnd_toStartOf="@id/endGL"
        app:layout_constraintStart_toStartOf="@+id/startGL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/all_words_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_words_list_button_string"
        app:layout_constraintBottom_toTopOf="@+id/bottomGL"
        app:layout_constraintEnd_toStartOf="@id/endGL"
        app:layout_constraintStart_toEndOf="@id/startGL"
        app:layout_constraintTop_toTopOf="@+id/topGL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/learn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/learn_button_string"
        app:layout_constraintEnd_toStartOf="@id/endGL"
        app:layout_constraintStart_toEndOf="@id/startGL"
        app:layout_constraintTop_toBottomOf="@+id/all_words_list_button" />


</androidx.constraintlayout.widget.ConstraintLayout>