<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="congratsViewModel"
            type="com.example.lernen.ui.congrats.CongratsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startGL"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGL"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topGL"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottomGL"
            app:layout_constraintGuide_end="6dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats_string"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@id/endGL"
            app:layout_constraintStart_toEndOf="@id/startGL"
            app:layout_constraintTop_toBottomOf="@id/topGL" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newly_string"
            android:onClick="@{(view) -> congratsViewModel.onClick(view, 0)}"
            app:layout_constraintBottom_toTopOf="@+id/bottomGL"
            app:layout_constraintStart_toEndOf="@id/startGL" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/another_lesson_string"
            android:onClick="@{(view) -> congratsViewModel.onClick(view, 1)}"
            app:layout_constraintBottom_toTopOf="@+id/bottomGL"
            app:layout_constraintEnd_toStartOf="@id/endGL" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>