<?xml version="1.0" encoding="utf-8"?>
<layout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.lernen.ui.addNewWord.AddNewWordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startGL"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGL"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topGL"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottomGL"
            app:layout_constraintGuide_end="6dp"
            android:orientation="horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lesson_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/endGL"
            app:layout_constraintStart_toStartOf="@+id/startGL"
            app:layout_constraintTop_toBottomOf="@id/topGL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lesson_TIL_hint_string"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/word_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/endGL"
            app:layout_constraintStart_toStartOf="@+id/startGL"
            app:layout_constraintTop_toBottomOf="@id/lesson_TIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_TIL_hint_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/translation_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toStartOf="@+id/endGL"
            app:layout_constraintStart_toStartOf="@+id/startGL"
            app:layout_constraintTop_toBottomOf="@id/word_TIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/translation_TIL_hint_string" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_word_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_word_button_string"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/endGL"
            app:layout_constraintStart_toStartOf="@+id/startGL"
            app:layout_constraintTop_toBottomOf="@id/translation_TIL" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>